src/app/app.scss
// http://ionicframework.com/docs/theming/

// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.
//
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.


.toolbar{
  box-shadow: #000000 5px 5px 20px;
}

.toolbar-background{
  background: url("../assets/imgs/woodbrown.jpg");
  background-size: cover;
}

.toolbar-title{
  color: white;
  //font-family: Chalkboard, sans-serif;
  text-align: center;
  @font-face {
    font-family: chalkfont;
    src: url('../assets/fonts/chalkfont.ttf');
    //font-weight: bold;
    }

}

.content {
  background: #428957 url("../assets/imgs/chalkboard.png");
  background-size: cover;

  .label{
    color: white;
    font-weight: bold;
    font-family: Chalkboard, sans-serif;
    font-size: 140%;
  }

  .input{
    border: white solid 1px;
    background: transparentize(grey, 0.8);
  }
}

.content * {
  background: transparent;
  color: white;
}

.global__input-error{
  color: red;
}

.bar-button {
  color: white;
}

.card {
  //box-shadow: #000000 5px 5px 20px;
  //box-shadow: none;
}

.button{
  //background:map-get($colors, primary);
  background: transparent;
  //box-shadow: #000000 4px 4px 10px;
  //box-shadow: none;
}

.label {
  margin: 0;
  color: white;

}

.label-input{
  color: white;
}

.button-effect{
  background: transparent;
}

